generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum UserStatus {
  PENDING
  ACTIVE
  DISABLED
}

enum LinkCreatedVia {
  GUEST_WEB
  USER_WEB
  API
}

model User {
  id              String     @id @default(uuid()) @db.Uuid
  email           String     @unique
  passwordHash    String     @map("password_hash")
  status          UserStatus @default(PENDING)
  emailVerifiedAt DateTime?  @map("email_verified_at")
  createdAt       DateTime   @default(now()) @map("created_at")
  updatedAt       DateTime   @updatedAt @map("updated_at")
  links                   Link[]
  emailVerificationTokens EmailVerificationToken[]
  apiTokens               ApiToken[]

  @@map("users")
}

model EmailVerificationToken {
  id        String    @id @default(uuid()) @db.Uuid
  userId    String    @map("user_id") @db.Uuid
  user      User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  tokenHash String    @unique @map("token_hash")
  expiresAt DateTime  @map("expires_at")
  usedAt    DateTime? @map("used_at")
  createdAt DateTime  @default(now()) @map("created_at")

  @@index([userId])
  @@index([expiresAt])
  @@map("email_verification_tokens")
}

model ApiToken {
  id         String    @id @default(uuid()) @db.Uuid
  userId     String    @map("user_id") @db.Uuid
  user       User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  name       String
  tokenPrefix String   @map("token_prefix")
  tokenHash  String    @unique @map("token_hash")
  expiresAt  DateTime? @map("expires_at")
  revokedAt  DateTime? @map("revoked_at")
  lastUsedAt DateTime? @map("last_used_at")
  createdAt  DateTime  @default(now()) @map("created_at")

  @@index([userId])
  @@index([userId, createdAt])
  @@index([expiresAt])
  @@map("api_tokens")
}

model Link {
  id           String         @id @default(uuid()) @db.Uuid
  userId       String?        @map("user_id") @db.Uuid
  user         User?          @relation(fields: [userId], references: [id])
  shortCode    String         @unique @map("short_code")
  originalUrl  String         @map("original_url")
  expiresAt    DateTime?      @map("expires_at")
  isActive     Boolean        @default(true) @map("is_active")
  createdVia   LinkCreatedVia @map("created_via")
  createdAt    DateTime       @default(now()) @map("created_at")
  updatedAt    DateTime       @updatedAt @map("updated_at")
  clickEvents  ClickEvent[]

  @@index([userId])
  @@index([userId, createdAt])
  @@index([expiresAt])
  @@map("links")
}

model ClickEvent {
  id           String   @id @default(uuid()) @db.Uuid
  linkId       String   @map("link_id") @db.Uuid
  link         Link     @relation(fields: [linkId], references: [id], onDelete: Cascade)
  clickedAt    DateTime @default(now()) @map("clicked_at")
  referrerHost String?  @map("referrer_host") @db.VarChar(255)
  userAgent    String?  @map("user_agent") @db.Text
  ipHash       String?  @map("ip_hash") @db.VarChar(64)

  @@index([linkId, clickedAt])
  @@index([linkId, referrerHost])
  @@index([clickedAt])
  @@map("click_events")
}
